stretching blog width to the limit on mobile - fix

--- a/css/ciessesse.css
+++ b/css/ciessesse.css
@@ -25,8 +25,8 @@ body {
         padding-right: 5px !important;
     }
     .col-12{
-        padding-right: 10px;
-        padding-left: 10px;
+        padding-right: 10px !important;
+        padding-left: 10px !important;
     }
 }
 
